Updated the DMS Project Design

--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🔧</text></svg>" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#00a1c9" />
+    <meta name="theme-color" content="#2563eb" />
     <meta
       name="description"
-      content="Amazon Connect Troubleshooting Guide"
+      content="TeamDMS Troubleshooting Guide - Comprehensive troubleshooting resources for SVLS (Serverless) and DMI (Direct Management Interface) services"
     />
-    <title>☎️ Amazon Connect Troubleshooting Guide</title>
+    <meta name="keywords" content="AWS, Amazon Connect, Troubleshooting, DMS, Serverless, Lambda, API Gateway, Step Functions" />
+    <meta name="author" content="TeamDMS" />
+    <title>TeamDMS Troubleshooting Guide</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
